create css file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 </head>
 <body>
     <!-- navber Started -->
+    <header class="d-flex justify-around mt-1 flex-wrap bg-color">
+        <div class="logo">
+            <img class="logo-img" src="./image/logo.webp" alt="logo">
+        </div>
+        <nav class="nav-items d-flex gap-2 flex-wrap item-center">
+            <a class="text-none text-white br nav-items" href="#">Home</a>
+            <a class="text-none text-white nav-items" href="#">About Us</a>
+            <a class="text-none text-white nav-items" href="#">Publication</a>
+            <button class="franchise-btn">Get a Franchise</button>
+            <button class="order-btn">Order Online <span class="icon-bg"><i
+             class="fa-solid fa-arrow-right arrow-icon"></i></span></button>
+        </nav>
+    </header>
+
+
     <!-- navber ended -->
 
 
